# openhab-mcp

./: .clineignore  .env.example  .gitignore  AGENTS.md  DEVELOPER.md  Dockerfile  Makefile  README.md  __init__.py  docker-compose.test.yml  docker-compose.yml  install.py  models.py  openhab_client.py  openhab_mcp_server.py  pyproject.toml  requirements.txt  template_manager.py  test_link_encoding.py  test_openhab.py
.github/workflows/: docker-image.yml  docker.yml
docker/: Dockerfile  docker-compose.prod.yml  entrypoint.sh
openhab_mcp/: models.py  openhab_client.py  openhab_mcp_server.py
process_templates/: replace_thing_v1.json  resolve_duplicate_thing_v1.json
rules/: terrace_area_security.js
scripts/: mcp_client_sse_list_items.py  mcp_client_stdio_list_items.py  mcp_client_streamable_list_items.py  stop-and-delete.sh
test/: test_items.py  test_rules.py
tests/: test_items.py  test_openhab_client.py  test_rules.py  test_transport_smoke.py
